# tictactoe

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: CodeCoverage.cmake
src/: CMakeLists.txt  board.cc  board.h  game.cc  game.h  main.cc  player.cc  player.h  tictactoeboard.cc  tictactoeboard.h
tests/: CMakeLists.txt  test_sample.cc
